# hawk

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO  __init__.py  environment.yml  ffmpeg_notes.txt  noxfile.py  poe_tasks.toml  pyproject.toml  setup.py  startup.sh  tasks.toml
configs/: config.yml  config_gascola_test.yml  deploy-config.yml  dota_sample_config.yml  flutter.yml  fsl.yml  sample_resnet.yml  school_bus.yml  school_bus_video.yml  train_example_DOTA_roundabout.txt  yolo.yml
docker/: Dockerfile
docs/: README.md  a2s_api.md  h2a_api.md  h2c_api.md  hawk-sequence.png.license  messages.md  s2h_api.md  s2s_api.md  user_guide.md
fireqos/: common-conf  scenario-100k.conf  scenario-100k.conf.license  scenario-12k.conf  scenario-12k.conf.license  scenario-1M.conf  scenario-30k.conf  scenario-50k.conf
hawk/: __init__.py  deploy_config.py  server_main.py
hawk-plugin-template/: README.md  pyproject.toml
hawk-plugin-template/src/hawk_plugin_template/: __init__.py  model.py  retriever.py
hawk/api/: __init__.py  a2s_api.py  h2c_api.py  s2h_api.py  s2s_api.py
hawk/context/: context_base.py  data_manager_context.py  model_trainer_context.py
hawk/core/: attribute_provider.py  data_manager.py  hawk_stub.py  mission.py  mission_manager.py  model.py  model_trainer.py  object_provider.py  result_provider.py  utils.py
hawk/home/: admin.py  home_flutter.py  home_main.py  inbound.py  outbound.py  result_stream.py  result_stream_new.py  script_labeler.py  ui_labeler.py  utils.py
hawk/proto/: __init__.py  messages_pb2.py  svm_trainer_pb2.py
hawk/reexamination/: full_reexamination_strategy.py  no_reexamination_strategy.py  reexamination_strategy.py  top_reexamination_strategy.py
hawk/retrain/: absolute_policy.py  absolute_threshold_policy.py  model_policy.py  percentage_policy.py  percentage_threshold_policy.py  retrain_policy.py  retrain_policy_base.py  sampleInterval_policy.py
hawk/retrieval/: diamond_attribute_provider.py  dota_retriever.py  filesystem_retriever.py  frame_retriever.py  random_retriever.py  retriever.py  retriever_stats.py  tile_retriever.py  video_parser.py  video_retriever.py
hawk/scout/: server_main.py
hawk/scout/api/: a2s_api.py  h2c_api.py  s2h_api.py  s2s_api.py
hawk/scout/context/: context_base.py  data_manager_context.py  model_trainer_context.py
hawk/scout/core/: attribute_provider.py  data_manager.py  hawk_stub.py  mission.py  mission_manager.py  model.py  model_trainer.py  object_provider.py  result_provider.py  utils.py
hawk/scout/reexamination/: full_reexamination_strategy.py  no_reexamination_strategy.py  reexamination_strategy.py  top_reexamination_strategy.py
hawk/scout/retrain/: absolute_policy.py  model_policy.py  percentage_policy.py  retrain_policy_base.py  sampleInterval_policy.py
hawk/scout/retrieval/: frame_retriever.py  random_retriever.py  retriever.py  tile_retriever.py  video_parser.py  video_retriever.py
hawk/scout/selection/: diversity_selector.py  selector_base.py  threshold_selector.py  token_selector.py  topk_maxent_selector.py  topk_selector.py
hawk/selection/: diversity_selector.py  full_reexamination_strategy.py  no_reexamination_strategy.py  reexamination_strategy.py  selector.py  selector_base.py  selector_stats.py  threshold_selector.py  token_selector.py  top_reexamination_strategy.py  topk_dynamic_selector.py  topk_maxent_selector.py  topk_selector.py  topk_threshold_selector.py
hawk/trainer/dnn_classifier/: model.py  train_model.py  trainer.py
hawk/trainer/few_shot/: model.py  trainer.py
hawk/trainer/fsl/: augment.py  model.py  trainer.py
hawk/trainer/yolo/: model.py  trainer.py
hawk_ui/: README.md
hawk_ui/lib/: main.dart
hawk_ui/lib/models/: filters.dart  results.dart
hawk_ui/lib/providers/: websocket.dart
hawk_ui/lib/styles/: buttons.dart
hawk_ui/lib/widgets/: color_filter.dart  dropdown.dart  filter_select.dart  fsl_filter.dart  hawk_mode.dart  result_display copy.dart  result_display.dart
hawk_ui/linux/: my_application.cc
hawk_ui/web/: index.html  manifest.json
home/: __init__.py  admin.py  home_flutter.py  home_main.py  inbound.py  outbound.py  result_stream.py  result_stream_new.py  scout-restart.sh  script_labeler.py  stats.py  ui_labeler.py  utils.py
home/configs/: config.yml  flutter.yml  fsl.yml  hawk.yml  sample_resnet.yml  school_bus_video.yml
home/hawk_ui/: pubspec.yaml
home/hawk_ui/lib/: main.dart
home/hawk_ui/linux/: CMakeLists.txt
home/hawk_ui/test/: widget_test.dart
home/static/css/: index.css
home/static/js/: main.js
home/templates/: index.html
monitoring/: README.md  docker-compose.yml  grafana-dashboards.yaml  grafana-datasource.ini  grafana-datasource.yaml  prometheus.yml  scouts.yaml.example
monitoring/dashboards/: Hawk Mission.json
plugins/hawk-plugins-template/: README.md  pyproject.toml
protos/: common.proto  messages.proto  svm_trainer.proto
protos/hawk/proto/: messages.proto
scripts/: generate_proto.py  split_data.py  split_frame2tiles.py
src/hawk/: __init__.py  classes.py  deploy_config.py  detection.py  hawkobject.py  mission_config.py  objectid.py  plugins.py  ports.py  rusty.py
src/hawk/deploy/: __main__.py  build.py  dataset.py  deploy.py
src/hawk/gui/: Bootstrap.py  Clustering.py  Config.py  Labeling.py  Mission.py  Stats.py  Welcome.py  __main__.py  app.py  deployment.py  elements.py  mission_control.py
src/hawk/home/: admin.py  hawk_typing.py  home_flutter.py  home_labeler.py  home_main.py  home_scout.py  hosts  inbound.py  label_broker.py  label_utils.py  outbound.py  result_stream.py  result_stream_new.py  scout-restart.sh  stats.py  (+7 more)
tests/: conftest.py  test_dnn_classifier.py  test_entrypoints.py  test_entrypoints_deploy.py  test_entrypoints_home.py  test_entrypoints_scout.py  test_torch.py
tests/common/: test_plugin_loader.py  test_plugin_model.py  test_plugin_retriever.py  test_retriever.py
tests/home/: test_entrypoints_home.py
tests/scout/: conftest.py  test_dnn_classifier.py  test_entrypoints.py  test_entrypoints_scout.py  test_retriever.py  test_torch.py
(+159 files in other folders)
