[tool.poetry]
name = "hawk"
version = "0.1.0"
description = "Hawk: Low-Bandwidth Remote Sensing of Rare Events"
authors = [
    "Carnegie Mellon University <satya+group@cs.cmu.edu>",
    "Shilpa George <shilpag@andrew.cmu.edu>",
    "Eric Sturzinger <esturzin@andrew.cmu.edu>",
    "Jan Harkes <jaharkes@cs.cmu.edu>",
]
license = "GPL-2.0-only"
readme = "README.md"
packages = [
    { include = "hawk", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
cattrs = ">=23.1.0"
pyyaml = "^6.0"
tqdm = "^4.66.1"

# deploy
# decorator seems to be a missing fabric dependency...
decorator = { version = "^5.1.1", optional = true }
fabric = { version = "^3.0.1", optional = true }

# home + scout
logzero = { version = "^1.5.0", optional = true }
numpy = { version = "^1.18.1", optional = true }
protobuf = { version = "^3.11.4", optional = true }
pyzmq = { version = "^23.2.1", optional = true }

# home
flask = { version = "^2.2.3", optional = true }
pillow = { version = "^9.5.0", optional = true }
python-dateutil = { version = "^2.8.1", optional = true }
websockets = { version = "^11.0.3", optional = true }

# scout
albumentations = { version = "^1.3.1", optional = true }
lovely-tensors = { version = "^0.1.15", optional = true }
multiprocessing-logging = { version = "^0.2.6", optional = true }
opencv-python-headless = { version = "^4.7.0.72", optional = true }
scikit-learn = { version = "^1.3.0", optional = true }
tensorboard = { version = "^2.1.1", optional = true }
torch = { version = "^1.13", optional = true }
torchvision = { version = "^0.14", optional = true }

[tool.poetry.extras]
deploy = [
    "decorator",
    "fabric",
]
home = [
    "flask",
    "logzero",
    "numpy",
    "pillow",
    "protobuf",
    "python-dateutil",
    "pyzmq",
    "websockets",
]
scout = [
    "albumentations",
    "logzero",
    "lovely-tensors",
    "multiprocessing-logging",
    "numpy",
    "opencv-python-headless",
    "protobuf",
    "pyzmq",
    "scikit-learn",
    "tensorboard",
    "torch",
    "torchvision",
]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
grpcio-tools = "~1.48.2"
isort = "^5.12.0"
mypy = "^1.2.0"
mypy-protobuf = "^1.20"
poethepoet = "^0.19.0"
pre-commit = "^3.3.3"
pytest = "^7.4.3"
types-invoke = "^2.0.0.10"
types-paramiko = "^3.0.0.8"
types-pillow = "^10.0.0.3"
types-protobuf = "^4.24.0.2"
types-pyyaml = "^6.0.12.10"
types-requests = "^2.31.0.6"
types-tqdm = "^4.66.0.2"

[tool.poetry.scripts]
hawk_deploy = "hawk.deploy.__main__:main"
hawk_flutter = "hawk.home.home_flutter:main"
hawk_home = "hawk.home.home_main:main"
hawk_scout = "hawk.scout.server_main:main"

[tool.black]
target-version = ["py38"]
extend-exclude = '''
(
  ^/src/hawk/scout/trainer/yolo/yolov5/ # exclude yolov5 code
| .*_pb2.pyi?                       # exclude protobuf stubs
)
'''

[tool.isort]
py_version = 38
profile = "black"
skip_glob = [
    "src/hawk/proto/*",
    "src/hawk/scout/trainer/yolo/yolov5/*",
]

[tool.mypy]
strict = true
files = ["src"]
exclude = "^src/hawk/scout/trainer/(few_shot/|yolo/yolov5/)"

[[tool.mypy.overrides]]
# ignore missing type hints errors from untyped modules
module = [
    "albumentations.*",
    "cv2.*",
    "fabric.*",
    "logzero.*",
    "multiprocessing_logging.*",
    "sklearn.*",
    "websockets.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.poe]
include = "tasks.toml"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API",
    "ignore:Deprecated call to `pkg_resources.declare_namespace",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
