[tool.poetry]
name = "cmuhawk"
version = "0.1.0"
description = "Hawk: Low-Bandwidth Remote Sensing of Rare Events"
authors = [
    "Carnegie Mellon University <satya+group@cs.cmu.edu>",
    "Shilpa George <shilpag@andrew.cmu.edu>",
    "Eric Sturzinger <esturzin@andrew.cmu.edu>",
    "Jan Harkes <jaharkes@cs.cmu.edu>",
]
license = "GPL-2.0-only"
readme = "README.md"
packages = [
    { include = "hawk", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
cattrs = ">=23.1.0"
importlib-metadata = "^8.5"
importlib-resources = "^6.4"
logzero = "^1.5.0"
numpy = [
    { version = "^1.24.4", python = "<3.9" },
    { version = "^1.26.4", python = "^3.9" },
]
pandas = "^2.0"
prometheus-client = "^0.20.0"
protobuf = ">=4.24.0"
pydantic = "^2.10"
pydantic-settings = "^2.8"
pyyaml = "^6.0"
pyzmq = ">=23.2.1"
tqdm = "^4.66.1"
typing-extensions = "^4.9.0"

# home
# decorator seems to be a missing fabric dependency...
decorator = { version = "^5.1.1", optional = true }
fabric = { version = "^3.0.1", optional = true }
pillow = { version = "^10.4.0", optional = true }
python-dateutil = { version = "^2.8.1", optional = true }
streamlit = {version = "^1.40.1", optional = true, python = "!=3.9.7"}
streamlit-label-kit = {version = "^0.1.2", optional = true, python = "!=3.9.7"}

# scout
albumentations = { version = "^1.3.1", optional = true }
lovely-tensors = { version = "^0.1.15", optional = true }
matplotlib = { version = "^3.6", optional = true }
multiprocessing-logging = { version = "^0.2.6", optional = true }
opencv-python-headless = { version = "^4.7.0.72", optional = true }
scikit-image = { version = ">=0.21", optional = true }
scikit-learn = { version = "^1.3.0", optional = true }
tensorboard = { version = "^2.1.1", optional = true }

# Here we can try and compare different pytorch releases, after changing
# this run `poetry lock ; poetry install -E home -E scout --sync`
#torch = { version = "^1.13", optional = true }
#torchvision = { version = "^0.14", optional = true }
#torch = { version = "2.0.0", optional = true }
#torchvision = { version = "^0.15", optional = true }
#torch = { version = "^2.1", optional = true, source = "torch-cu11" }
#torchvision = { version = "^0.16", optional = true, source = "torch-cu11" }
torch = { version = "^2.2", optional = true, source = "torch-cu11" }
torchvision = { version = "^0.17", optional = true, source = "torch-cu11" }

# for activity recognition
av = { version = "12.0.0", optional = true }
einops = { version = "^0.8.0", optional = true }
movinet-pytorch = { git = "https://github.com/Atze00/MoViNet-pytorch.git", branch = "main", optional = true } # <-- Changed to "movinet-pytorch"

# for http retriever
httpx = {version = "^0.28.1", optional = true}

[[tool.poetry.source]]
name = "torch-cu11"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.extras]
home = [
    "decorator",
    "fabric",
    "pandas",
    "pillow",
    "python-dateutil",
    "streamlit",
    "streamlit-label-kit",
]
scout = [
    "albumentations",
    "av",
    "einops",
    "lovely-tensors",
    "matplotlib",
    "movinet-pytorch",
    "multiprocessing-logging",
    "opencv-python-headless",
    "scikit-image",
    "scikit-learn",
    "tensorboard",
    "torch",
    "torchvision",
]
# under development, to be added to scout
http = [
    "httpx",
]

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.48.2,<1.73.0"
mypy = "^1.2.0"
mypy-protobuf = "^1.20"
pandas-stubs = "^2.0"
poethepoet = "^0.19.0"
pre-commit = "^3.3.3"
pytest = "^7.4.3"
pytest-benchmark = "^4.0.0"
types-invoke = "^2.0.0.10"
types-paramiko = "^3.0.0.8"
types-pillow = "^10.0.0.3"
types-protobuf = ">=4.24.0.2"
types-pyyaml = "^6.0.12.10"
types-requests = "^2.31.0.6"
types-tqdm = "^4.66.0.2"

[tool.poetry.scripts]
hawk_deploy = "hawk.deploy.__main__:main"
hawk_gui = "hawk.gui.__main__:main"
hawk_home = "hawk.home.home_main:main"
hawk_scout = "hawk.scout.server_main:main"
hawk_script_labeler = "hawk.home.script_labeler:main"

[tool.poetry.plugins."cmuhawk.retrievers"]
frame = "hawk.scout.retrieval.frame_retriever:FrameRetriever"
http = "hawk.scout.retrieval.http_retriever:HTTPRetriever"
k600 = "hawk.scout.retrieval.kinetics600.kinetics_600_retriever:K600Retriever"
network = "hawk.scout.retrieval.network_retriever:NetworkRetriever"
radar = "hawk.scout.retrieval.radar_retriever:RadarRetriever"
random = "hawk.scout.retrieval.random_retriever:RandomRetriever"
tile = "hawk.scout.retrieval.tile_retriever:TileRetriever"
video = "hawk.scout.retrieval.video_retriever:VideoRetriever"

[tool.mypy]
strict = true
files = ["src"]
exclude = "^src/hawk/scout/trainer/(few_shot/|yolo.*/|yolov5.*/)"
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]

[[tool.mypy.overrides]]
# ignore missing type hints errors from untyped modules
module = [
    "albumentations.*",
    "cv2.*",
    "fabric.*",
    "logzero.*",
    "matplotlib.*",
    "movinets.*",
    "multiprocessing_logging.*",
    "sklearn.*",
    "streamlit_label_kit",
    "websockets.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.poe]
include = "poe_tasks.toml"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API",
    "ignore:Deprecated call to `pkg_resources.declare_namespace",
]
markers = [
    "cuda: marks tests that depend on CUDA (deselect with '-m \"not cuda\"')",
    "home: components that run on home (deselect with '-m \"not home\"')",
    "scout: components that run on the scout (deselect with '-m \"not scout\"')",
]

[tool.ruff]
target-version = "py38"
exclude = [
    "*_pb2.py",
    "src/hawk/scout/trainer/few_shot/*/*",
    "src/hawk/scout/trainer/yolo/yolov5/*",
    "src/hawk/scout/trainer/yolo_radar/yolov5_radar/*",
]
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ruff.lint.flake8-copyright]
min-file-size = 1
notice-rgx = '(?i)(Copyright|SPDX-FileCopyrightText:)\s+((?:\(C\)|©)\s+)?\d{4}(-\d{4})*'

[tool.typos.default.extend-words]
booststrap = "bootstrap"
DOTA = "DOTA"  # name of a dataset we use
missino = "mission"
thr = "thr"  # abbreviation of threshold

[tool.uv.sources]
torch = { index = "torch-cu11" }
torchvision = { index = "torch-cu11" }

[[tool.uv.index]]
name = "torch-cu11"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
